# xf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
src/: lib.rs  main.rs
tests/: tests.rs  unix_tests.rs  windows_tests.rs
tests/fixtures/dir1/: Taskfile  Zfile  config1  config2  config3
tests/fixtures/dir3/: config1
