[package]
name = "xf"
version = "0.6.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "File-aware dynamic command runner"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/xf"
repository = "https://github.com/sigoden/xf"
autotests = false
categories = ["command-line-utilities"]
keywords = ["command-line", "args", "utility"]


[dependencies]
anyhow = "1"
shell-words = "1.1"

[profile.release]
lto = true
strip = true
opt-level = "z"

[dev-dependencies]
assert_cmd = "2.0"


[[test]]
name = "integration"
path = "tests/tests.rs"